Fix job button size on mobile

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -278,10 +278,11 @@ ul.job_list_items {
   text-align: right;
 }
   ul.job_list_items li{
-    width: 300px;
-    height: 50px;
+    width: 19em;
+    height: 3em;
     background: #3B4E6E;
-    margin-bottom: 1px;
+    /*margin-bottom: 1px;*/
+    margin-bottom: 0.1em;
     text-align: left;
   }
   ul.job_list_items li a {
